# mate-multimedia-control

./: AUTHORS  README  autogen.sh  configure.ac
src/: Makefile.am  applet.h  main.c  org.mate.applets.MultimediaControlApplet.mate-panel-applet.in  org.mate.panel.applet.MultimediaControlApplet.service.in
